#20 fixed spacing of navbar items

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -10,6 +10,7 @@
   height: 60px;
   padding-left: 30px;
   padding-right: 30px;
+  padding-top: 10px;
   margin-top: -2px;
 
   background-color: var(--navBarColor);
@@ -48,6 +49,8 @@
 
   }
   #pages{
+    margin-left: 5px;
+
     a {
       cursor: pointer;
     }
@@ -75,7 +78,9 @@
   #pages .material-icons {
     display: none;
   }
-  
+  #pages {
+    gap: 14px;
+  }
   
 }
 
@@ -83,10 +88,12 @@
   .nav-text {
     display: none;
   }
-  
+  #pages {
+    gap: 12px;
+  }
   #pages .material-icons {
     font-size: 28px;
-    margin-left: 12px;
+    // margin-left: 12px;
   }
   .contact{
       //for aligning with other icons
